Closed
Bug 1783507
Opened 2 years ago
Closed 2 years ago
Assertion failure: IsResumableMIRType(op->type())
Categories
(Core :: JavaScript Engine: JIT, defect)
Core
JavaScript Engine: JIT
Tracking
()
RESOLVED
FIXED
105 Branch
Tracking | Status | |
---|---|---|
firefox-esr91 | --- | unaffected |
firefox-esr102 | --- | unaffected |
firefox103 | --- | unaffected |
firefox104 | --- | unaffected |
firefox105 | --- | fixed |
People
(Reporter: lukas.bernhard, Assigned: anba)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: regression)
Attachments
(1 file)
Steps to reproduce:
On git commit 8e2e05ea9683 the attached sample triggers an assertion violation: Assertion failure: IsResumableMIRType(op->type()) (Resume point cannot encode its operands), at js/src/jit/IonAnalysis.cpp:3383
Bisecting the issue points to commit 7e937f10b173 related to bug 1062893.
obj-x86_64-pc-linux-gnu/dist/bin/js --fast-warmup --no-threads bug.js
bug.js:
function main() {
const v4 = new Uint16Array();
while (0 < 7) {
let v7 = 0 in v4;
({"a":v7} = v4);
}
const v9 = [0,0,0,0,0];
for (const v10 of v9) { }
}
main();
Reporter | ||
Updated•2 years ago
|
Component: Untriaged → JavaScript Engine: JIT
Product: Firefox → Core
Updated•2 years ago
|
Keywords: regression
Comment 1•2 years ago
|
||
Set release status flags based on info from the regressing bug 1062893
status-firefox103:
--- → unaffected
status-firefox104:
--- → unaffected
status-firefox105:
--- → affected
status-firefox-esr102:
--- → unaffected
status-firefox-esr91:
--- → unaffected
Updated•2 years ago
|
Blocks: l11d-js-fuzzing
Assignee | ||
Comment 3•2 years ago
|
||
Updated•2 years ago
|
Assignee: nobody → andrebargull
Status: NEW → ASSIGNED
Pushed by andre.bargull@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/3e49696955b6
Only recover MCompare with recoverable inputs. r=iain
Comment 6•2 years ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 105 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•