Bug 1783507: Only recover MCompare with recoverable inputs. r=iain

Differential Revision: https://phabricator.services.mozilla.com/D153915